k8s/staging/delete-base-postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: opsboard-postgres
  namespace: opsboard
$patch: delete
