k8s/staging/frontend-deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: opsboard-frontend
  namespace: opsboard
spec:
  template:
    spec:
      imagePullSecrets:
        - name: dockerhub-regcred
